# MindPrism

./: .env.example  .gitignore  .replit  README.md  RUNBOOK.md  TICKETS.md  capacitor.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  skills-lock.json  tailwind.config.ts  vite.config.ts
.github/: pull_request_template.md
agents/: README.md  core-team.yaml  endgame-requirements.md  registry.yaml  work_queue.md
attached_assets/: MindPrism_Admin_QA_Bug_Tickets_1772388061375.docx  MindPrism_Admin_QA_Bug_Tickets_1772389020217.docx  MindPrism_Admin_Redesign_Spec_1772389020217.docx  MindPrism_ChapterSummary_Editor_Ticket_1772403581027.docx  MindPrism_Improvement_Tickets_1772394347218.docx  MindPrism_QA_Audit_PRD_Tickets_1772405626227.docx  MindPrism_QA_Bug_Tickets_1772386533530.docx  MindPrism_Rollback_and_Requirements_1772398186849.docx  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1772672731482.txt  Pasted--MindPrism-UI-Redesign-Headway-Inspired-Design-System-E_1772394290407.txt  Pasted--REPLIT-AI-TICKET-Build-Complete-File-Upload-System-for_1772391433377.txt  Pasted--workspace-GIT-MERGE-AUTOEDIT-no-git-pull-origin-main-n_1772554732788.txt  Pasted-As-your-Senior-Product-Owner-I-can-tell-you-that-you-ar_1772026857092.txt  Pasted-Based-on-the-screenshot-you-shared-I-can-clearly-see-th_1772851482136.txt  Pasted-Got-it-you-want-better-topic-names-and-a-way-to-tell-th_1772160113653.txt  Pasted-Here-is-the-complete-Functional-Requirements-and-UI-UX-_1771891089900.txt  branding-1772555411878.json  content-1772319345645.md  (+12 more)
(+275 files in other folders)
